# crypto-ai-analyst

./: main.py  pyproject.toml
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: analysis_agent.py  insights_agent.py  langgraph_workflow.py  report_agent.py  visualization_agent.py
backend/app/models/: schemas.py
backend/app/services/: crypto_service.py  crypto_services.py
backend/app/utils/: schema_converters.py
